--- a/src/TheAthlectic/Views/NewsPage.cshtml
+++ b/src/TheAthlectic/Views/NewsPage.cshtml
@@ -1,7 +1,7 @@
 ﻿@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ContentModels.NewsPage>
-@using Umbraco.Cms.Web.Common.PublishedModels;
+@using TheAthletic.models;
 @using Umbraco.Extensions;
-@using ContentModels = Umbraco.Cms.Web.Common.PublishedModels;
+@using ContentModels = TheAthletic.models;
 @{
     Layout = "master.cshtml";
     var model = Model;
