--- a/src/TheAthlectic/Views/Partials/blocklist/Components/newsItem.cshtml
+++ b/src/TheAthlectic/Views/Partials/blocklist/Components/newsItem.cshtml
@@ -1,6 +1,6 @@
 ﻿@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<Umbraco.Cms.Core.Models.Blocks.BlockListItem>;
 @using Umbraco.Extensions;
-@using ContentModels = Umbraco.Cms.Web.Common.PublishedModels;
+@using ContentModels = TheAthletic.models;
 @{
     var content = (ContentModels.NewsPage)Model.Content;
     //var settings = (ContentModels.NewsItem)Model.Settings;
