--- a/src/TheAthlectic/Views/Partials/blocklist/Components/galleryImages.cshtml
+++ b/src/TheAthlectic/Views/Partials/blocklist/Components/galleryImages.cshtml
@@ -1,5 +1,5 @@
 ﻿@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<Umbraco.Cms.Core.Models.Blocks.BlockListItem>;
-@using ContentModels = Umbraco.Cms.Web.Common.PublishedModels;
+@using ContentModels = TheAthletic.models;
 @{
     var content = (ContentModels.GalleryImages)Model.Content;
 
